tests/res/has/error_spec_expr.say
say x = 1;
x has (1 + 1); // error: The right side of `has` must be a key, a type, or a literal shape, not a value
